Added MakeStringGood and ValidPalindromeTwo